# Index

./: .gitignore  .gitmodules  AGENTS.md  Dependencies.lua  Directory.Build.props  README.md  premake5.lua
Axiom-Editor/src/Editor/: ApplicationEditorAccess.hpp  AxiomPackageInstaller.cpp  EditorCamera.hpp  ExternalEditor.cpp  ExternalEditor.hpp
Axiom-Editor/src/Gui/: AddComponentPopup.cpp  AddComponentPopup.hpp  AssetBrowser.cpp  AssetBrowser.hpp  AssetBrowserActions.cpp  ComponentInspectors.cpp  ImGuiContextLayer.cpp  ImGuiUtils.hpp  PackageManagerPanel.cpp  PrefabInspector.cpp  PrefabInspector.hpp
Axiom-Editor/src/Inspector/: PropertyDrawer.cpp  ReferencePicker.cpp  ReferencePicker.hpp
Axiom-Editor/src/Scripting/: ScriptComponentInspector.cpp  ScriptComponentInspector.hpp  ScriptDiscovery.hpp
Axiom-Editor/src/Systems/: ImGuiEditorLayer.cpp  ImGuiEditorLayer.hpp  ImGuiEditorLayerChrome.cpp  ImGuiEditorLayerPanels.cpp  ImGuiEditorLayerViewport.cpp
Axiom-Engine/src/Audio/: Audio.cpp  AudioManager.cpp  AudioManager.hpp
Axiom-Engine/src/Collections/: AABB.hpp
Axiom-Engine/src/Components/: Components.hpp  Tags.hpp
Axiom-Engine/src/Core/: Application.cpp  Application.hpp  Input.cpp  Input.hpp  Log.cpp  Log.hpp  Memory.cpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
Axiom-Engine/src/Graphics/: GizmoRenderer.cpp  GizmoRenderer.hpp  Instance44.hpp  OpenGL.cpp  OpenGL.hpp  RenderApi.hpp  Renderer2D.cpp  Shader.cpp  ShaderManager.hpp  Texture2D.cpp  TextureManager.cpp  TextureManager.hpp
Axiom-Engine/src/Gui/: GuiRenderer.cpp  GuiRenderer.hpp  UIDrawOrder.hpp
Axiom-Engine/src/Inspector/: PropertyDescriptor.hpp  PropertyMetadata.hpp  PropertyRegistration.hpp  PropertyType.hpp  PropertyValue.cpp  PropertyValue.hpp
Axiom-Engine/src/Math/: Random.cpp  Random.hpp
Axiom-Engine/src/Physics/: Box2DWorld.cpp  Box2DWorld.hpp  CollisionDispatcher.hpp  Physics2D.cpp  PhysicsUtility.cpp  PhysicsUtility.hpp
Axiom-Engine/src/Project/: AxiomProject.cpp  AxiomProject.hpp  LauncherRegistry.cpp
Axiom-Engine/src/Scene/: BuiltInComponentRegistration.cpp  EntityHelper.cpp  (+7 more)
Axiom-Launcher/: imgui.ini
Axiom-Runtime/src/: RuntimeApplication.cpp  RuntimeImGuiHost.cpp  RuntimeSplashLayer.cpp  RuntimeSplashLayer.hpp
Axiom-ScriptCore/: Axiom-ScriptCore.csproj
Docs/Editor/: project-gitignore.txt
Index-Editor/: premake5.lua
Index-Editor/src/: EditorApplication.cpp
Index-Engine/: README.md  premake5.lua
Index-Engine/src/: EntryPoint.hpp  Index.hpp  pch.hpp
Index-Launcher/: premake5.lua
Index-Launcher/src/: LauncherApplication.cpp
Index-NativeScripts/: CMakeLists.txt
Index-NativeScripts/Source/: FloatingMotion.cpp  NativeScriptExports.cpp  NewNativeScript.cpp  NewNativeScript1.cpp  PatrolMovement.cpp  Spinner.cpp
Index-PackageTool/: Index-PackageTool.csproj  Program.cs
Index-Runtime/: premake5.lua
Index-Runtime/src/: RuntimeApplication.cpp  RuntimeImGuiHost.cpp  RuntimeImGuiHost.hpp  RuntimeLogLayer.cpp  RuntimeLogLayer.hpp  RuntimeProfilerLayer.cpp  RuntimeProfilerLayer.hpp  RuntimeSplashLayer.cpp  RuntimeSplashLayer.hpp  RuntimeStatsLayer.cpp  RuntimeStatsLayer.hpp
Index-Sandbox/: Index-Sandbox.csproj  premake5.lua
Index-Sandbox/Source/: CreateEntityJobSample.cs  JobSystemQuickTest.cs  PlayerController.cs  PrefabSpawnJobSample.cs  SpinSystem.cs
Index-ScriptCore/: Index-ScriptCore.csproj  premake5.lua
Index-ScriptCore/Source/: GlobalUsings.cs
Tests/Index-Engine-Tests/: premake5.lua
premake/: package-loader.lua
premake/dependencies/: box2d.lua  dawn.lua  glfw.lua  index_physics.lua  tracy.lua
scripts/: BumpPackageVersion.py  FetchDawnDepsMinimal.py  NewPackage.py  RemovePackage.py  RunTests.bat  Setup.bat  Setup.py  SetupDawn.bat  index-build-env.bat  setup-dotnet.ps1
scripts/ci/: linux_smoke_test.sh  runtime_smoke_test.py
scripts/dawn/: BootstrapCMake.bat  BootstrapCMake.ps1  FetchDawnDepsMinimal.py  SetupDawn.bat  SetupDawn.sh
(+578 files in other folders)
